se creo archivo de funciones generales, se modifico la vista de campanias para mejoramiento

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,3 +9,9 @@
 
 // If you want to add something do it here
 @import "custom";
+
+$theme_colors: (
+    "primary": #ccc,
+    "dark": #fff,
+    "seconday": #ddd
+)
