--- a/src/css/sideBar.css
+++ b/src/css/sideBar.css
@@ -3,13 +3,15 @@
     
     position: absolute;
     right: 0;
-    background-color: rgb(160, 157, 157);
-    color: rgb(26, 25, 25);  
+    background-color: #BDBDC1;
+    color: black;  
     height: 80%;
     z-index: 999;
     width: 500px;
     transform: translateX(100%);
     transition: all 0.4s;
+    border-radius: 5px;
+    padding: 35px;
 }
 
 .sideBar--open{
@@ -18,8 +20,18 @@
     
 }
 
-.sideBar li{
-    list-style: none;
-    padding: 1rem 2rem;
-   
+.sideBar h4{
+    text-align: center;
+}
+
+.sideBar h5:hover{
+    cursor: pointer;
+}
+
+select{
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+    color: #7681A0;
+    border: none;
 }
