--- a/src/css/campania.css
+++ b/src/css/campania.css
@@ -26,21 +26,25 @@
     visibility: hidden;
     position: absolute;
    
+   
 }
 
 .opciones--open{
     z-index: 99;
     position: absolute;
     float: right;
-    width: 20%;
-    height: 35%;
+    width: 10%;
+    height: 30%;
 
     right: 1px;
 
     background-color: rgb(196, 199, 202);
-    text-align: center;
+    text-align: left;
+    padding-top: 5px;
+    padding-left: 5px;
     border-radius: 5px;
     transition: all 0.5s ease-out;
+    
 }
 
 .opciones h5{
