--- a/src/css/campania.css
+++ b/src/css/campania.css
@@ -1,8 +1,10 @@
+.puntos{
+   text-align: center;
+}
+
 .bi-three-dots{
-    position: absolute;
-    margin-left: 105px;
-    margin-top: -15px;
-    font-size: 13px;
+    display: block;
+    margin: 0 auto;
     
 }
 
@@ -33,12 +35,13 @@
 }
 
 .opciones--open{
-    z-index: 99;
+    z-index: 2;
     position: absolute;
     float: right;
     width: 10%;
     height: 30%;
 
+    margin-top: 20px;
     right: 1px;
 
     background-color: rgb(196, 199, 202);
@@ -47,6 +50,7 @@
     padding-left: 5px;
     border-radius: 5px;
     transition: all 0.5s ease-out;
+    box-shadow: -5px 5px 8px #999;
     
 }
 
