--- a/src/css/sideBar.css
+++ b/src/css/sideBar.css
@@ -13,6 +13,7 @@
     border-radius: 5px;
     padding: 35px;
     transition: all 0.5s ease-out;
+    box-shadow: -5px 5px 5px #999;
 }
 
 .sideBar--open{
