--- a/src/css/campania.css
+++ b/src/css/campania.css
@@ -50,8 +50,7 @@
     padding-left: 5px;
     border-radius: 5px;
     transition: all 0.5s ease-out;
-    box-shadow: -5px 5px 8px #999;
-    
+    box-shadow: -5px 5px 8px #999;   
 }
 
 .opciones h5{
@@ -61,4 +60,8 @@
 
 .opt{
     cursor: pointer;
+}
+
+.side{
+    position: relative;
 }
