--- a/src/css/eliminar.css
+++ b/src/css/eliminar.css
@@ -1,16 +1,26 @@
 .eliminar{
     position: absolute;
+    margin: 50px;
     z-index: 3;
     text-align: center;
     padding: 1%;
     margin: 0 auto;
     width: 30%;
     border-radius: 5px;
-    background-color: #BDBDC1;
+    background-color: white;
     transition: all 0.5s ease-out;
-    box-shadow: -5px 5px 5px #999;
+    box-shadow: -5px 5px 5px #999; 
+    left: 0; 
+    right: 0; 
+    top: 40%;
+    margin-left: auto; 
+    margin-right: auto;
+  
+}
+
+.eliminar-close{
+    position: absolute;
     visibility: hidden;
-    
 }
 
 .titulo_eliminar{
