--- a/src/css/sideBar.css
+++ b/src/css/sideBar.css
@@ -3,7 +3,7 @@
     right: 0;
     background-color: white;
     color: black;  
-    height:100%;
+    height:600px;
     z-index: 999;
     width: 35%;
     transform: translateX(110%);
