--- a/src/css/campania.css
+++ b/src/css/campania.css
@@ -38,19 +38,17 @@
     z-index: 2;
     position: absolute;
     float: right;
-    width: 10%;
+    width: 90px;
     height: 110px;
-
     margin-top: 20px;
-    right: 1px;
-
-    background-color: rgb(196, 199, 202);
+    right: 20px;
+    background-color: white;
     text-align: left;
     padding-top: 5px;
     padding-left: 5px;
     border-radius: 5px;
     transition: all 0.5s ease-out;
-    box-shadow: -5px 5px 8px #999;   
+    box-shadow: -5px 5px 8px #c0c0c0;   
 }
 
 .opciones h5{
@@ -63,9 +61,18 @@
 }
 
 .side{
-    position: relative;
+   
+    width: 100%;
+   
 }
 
 .descripcion_campania{
     width: 50%;
 }
+
+/* Debe estar arriba que el sidebar */
+.footer{
+    z-index: 5;
+}
+
+
