--- a/src/css/sideBar.css
+++ b/src/css/sideBar.css
@@ -1,17 +1,19 @@
 .sideBar{     
     position: absolute;
+    /* bottom: 1px; */
+    top: 90px;
+    height:550px;
     right: 0;
     background-color: white;
     color: black;  
-    height:600px;
-    z-index: 999;
+    z-index: 4;
     width: 35%;
     transform: translateX(110%);
     transition: all 0.4s;
     border-radius: 5px;
     padding: 2% 3% 2% 3%;
     transition: all 0.5s ease-out;
-    box-shadow: -5px 5px 5px #999;
+    box-shadow: -5px 5px 5px #c0c0c0;
 }
 
 .sideBar--open{
@@ -40,4 +42,20 @@ select{
     height: 100px;
     width: 100%;
     padding-left: 10px;
+}
+
+@media (max-width: 1280px){
+    
+    .sideBar{
+         max-height: 500px;
+         overflow-y: scroll;
+    }
+
+}
+
+@media (max-width: 2200px){
+    .sideBar{        
+        height: 85%;
+        overflow-y: scroll;
+    }
 }
