--- a/src/css/form.css
+++ b/src/css/form.css
@@ -2,9 +2,12 @@
   position: absolute;
   background: white;
   padding: 2% 5% 2% 5%;
-  box-shadow: -5px 5px 5px #c0c0c0;
+  box-shadow: 0px 0px 5px 2px #c0c0c0;
+
+  /* #c0c0c0 */
+        
   z-index: 4;
-  width: 82%;
+  width: 100%;
   transform: translateY(-110%);
   transition: all 0.5s ease-out;
 }
@@ -23,3 +26,9 @@
   margin-right: 10%;
   width: 40%;
 }
+
+/* @media only screen and (max-width: 600px) {
+  body {
+    background-color: lightblue;
+  }
+} */
