--- a/src/css/campania.css
+++ b/src/css/campania.css
@@ -17,8 +17,9 @@
     cursor: pointer;
 }
 
-.side {
+.contenedor{
     width: 100%;
+    height: 75vh;
     /* cambio brusco */
     position: relative;
 }
