--- a/src/css/sideBar.css
+++ b/src/css/sideBar.css
@@ -1,19 +1,20 @@
 .sideBar{     
     position: absolute;
     /* bottom: 1px; */
-    top: 90px;
-    height:550px;
     right: 0;
     background-color: white;
     color: black;  
     z-index: 4;
-    width: 35%;
+   
     transform: translateX(110%);
     transition: all 0.4s;
     border-radius: 5px;
     padding: 2% 3% 2% 3%;
     transition: all 0.5s ease-out;
     box-shadow: -5px 5px 5px #c0c0c0;
+
+    width: 35%;
+    height: 100% !important;
 }
 
 .sideBar--open{
